# featherpdf-linux

./: .clang-format  .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md
.github/workflows/: ci.yml
docs/: index.html  style.css
packaging/: feather-pdf-action  feather-pdf-nautilus.py  io.github.s4rt4.FeatherPDF.desktop  io.github.s4rt4.FeatherPDF.metainfo.xml  io.github.s4rt4.FeatherPDF.servicemenu.desktop  io.github.s4rt4.FeatherPDF.thumbnailer
packaging/cups/: Feather-PDF.ppd  feather-pdf-print  feather-pdf-setup-printer  feather-pdf.convs  feather-pdf.types
packaging/flatpak/: io.github.s4rt4.FeatherPDF.yaml
packaging/systemd/: feather-pdf-watch.service
resources/: feather.qrc
src/: CMakeLists.txt
src/app/: MainWindow.cpp  MainWindow.h  main.cpp
src/backends/: Annotator.cpp  Annotator.h  BatchRunner.cpp  BatchRunner.h  CmykConverter.cpp  CmykConverter.h  Comparer.cpp  Comparer.h  Converter.cpp  Converter.h  Flattener.cpp  Flattener.h  FormDetector.cpp  FormDetector.h  FormEditor.cpp  FormEditor.h  FormFiller.cpp  FormFiller.h  ImageExporter.cpp  ImageExporter.h  LinkEditor.cpp  LinkEditor.h  LtvSigner.cpp  LtvSigner.h  Measurer.cpp  Measurer.h  Ocr.cpp  Ocr.h  OcrPreprocess.cpp  OcrPreprocess.h  Optimizer.cpp  Optimizer.h  PatternRedactor.cpp  PatternRedactor.h  PdfA.cpp  PdfA.h  PdfEditor.cpp  PdfEditor.h  ReadAloud.cpp  ReadAloud.h  (+22 more)
src/cli/: Cli.cpp  Cli.h
src/core/: FeatherDocument.cpp  FeatherDocument.h  PageCommands.h
src/ui/: AnnotationBar.cpp  AnnotationBar.h  AnnotationsPanel.cpp  AnnotationsPanel.h  AttachmentsPanel.cpp  AttachmentsPanel.h  BatchDialog.cpp  BatchDialog.h  BatesDialog.cpp  BatesDialog.h  CombineDialog.cpp  CombineDialog.h  CommandBar.cpp  CommandBar.h  CompareReportDialog.cpp  CompareReportDialog.h  CropDialog.cpp  CropDialog.h  CustomizeToolsDialog.cpp  CustomizeToolsDialog.h  DocsDialog.cpp  DocsDialog.h  DocsView.cpp  DocsView.h  ExportImageDialog.cpp  ExportImageDialog.h  ExtractDialog.cpp  ExtractDialog.h  FindBar.cpp  FindBar.h  FindRedactDialog.cpp  FindRedactDialog.h  FlattenDialog.cpp  FlattenDialog.h  FloatingPill.cpp  FloatingPill.h  FormFieldDialog.cpp  FormFieldDialog.h  FormPanel.cpp  FormPanel.h  (+78 more)
tests/: CMakeLists.txt  test_annotator.cpp  test_batchrunner.cpp  test_cli.cpp  test_converter.cpp  test_document.cpp  test_formdetector.cpp  test_formeditor.cpp  test_formroundtrip.cpp  test_headerfooter.cpp  test_imageexporter.cpp  test_linkeditor.cpp  test_measurer.cpp  test_ocrpreprocess.cpp  test_optimizer.cpp  test_patternredactor.cpp  test_pdfa.cpp  test_pdfeditor.cpp  test_readaloud.cpp  test_sanitizer.cpp  test_scanner.cpp  test_signer.cpp  test_snapshotexporter.cpp  test_stamplibrary.cpp  test_textcomparer.cpp  test_texteditor.cpp  test_translations.cpp  test_xfdf.cpp
translations/: feather_en.ts  feather_id.ts
